src/assets/styles/components/cursor.css
.cursor {
    --cursor-size: 32px;

    position: fixed;
    width: var(--cursor-size);
    height: var(--cursor-size);
    pointer-events: none;
    background-repeat: no-repeat;
    background-position: center;
    z-index: 10000;
    border: 1px solid var(--white);
    border-radius: 32px;
    transition: width 125ms, height 125ms, border-radius 125ms;
    mix-blend-mode: difference;
}

.cursor.interactive {
    --cursor-size: 42px;
}

